design with basic animations

--- a/index.html
+++ b/index.html
@@ -6,9 +6,194 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
-    <title>Untitled Document</title>
+    <script src="./js/load_svg.js" defer></script>
+    <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="sidebar">
+        <div class="logo">Dashboard</div>
+        <ul>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#house"/></svg></div>
+                <div class="label">Home</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#mesas"/></svg></div>
+                <div class="label">Profile</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#message"/></svg></div>
+                <div class="label">Messages</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#history"/></svg></div>
+                <div class="label">History</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#task"/></svg></div>
+                <div class="label">Tasks</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#community"/></svg></div>
+                <div class="label">Communities</div>
+            </li>
+        </ul>
+        <ul>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#settings"/></svg></div>
+                <div class="label">Settings</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#support"/></svg></div>
+                <div class="label">Support</div>
+            </li>
+            <li class="link">
+                <div class="icon"><svg class="" width="16" height="16"><use href="#privacy"/></svg></div>
+                <div class="label">Privacy</div>
+            </li>
+        </ul>
+    </div>
+    <div class="header">
+        <div class="line">
+            <div class="searchbar">
+                <svg class="" width="16" height="16"><use href="#search"/></svg>
+                <input type="text">
+            </div>
+            <div class="user-profile">
+                <svg class="" width="16" height="16"><use href="#bell"/>
+                <img src="./img/profile.jpg" alt="">
+                <div class="name">Penrose Stellar</div>
+            </div>
+        </div>
+        <div class="line">
+            <div class="welcome">
+                <img src="./img/profile.jpg" alt="">
+                <div>
+                    Welcome back,
+                    <div class="userid">Penrose Stellar (@penrose.in.space)</div>
+                </div>
+            </div>
+            <div class="actions">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="section projects">
+            <div class="title">Your Projects</div>
+            <div class="card-container scrollable">
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="description">
+                        <div class="title">Project 1</div>
+                        <div class="body">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    </div>
+                    <div class="footer">
+                        <button><svg class="" width="16" height="16"><use href="#privacy"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#edit"/></svg></button>
+                        <button><svg class="" width="16" height="16"><use href="#delete"/></svg></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section announcements">
+            <div class="title">Announcements</div>
+            <div class="card">
+                <div class="item"><div class="title">Test</div><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora facilis odit tenetur et explicabo tempore, voluptate voluptates? Numquam sed repellendus officiis, error, neque aliquam debitis, iste unde voluptas assumenda natus?</p></div>
+                <div class="item"><div class="title">Test</div>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                <div class="item"><div class="title">Test</div>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                <div class="item"><div class="title">Test</div>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+            </div>
+        </div>
+        <div class="section trending">
+            <div class="title">Trending</div>
+            <div class="card">
+                <div class="item profile">
+                    <img src="./img/profile.jpg" alt="profile-picture">
+                    <div class="idcard">
+                        <div class="username">@pepito</div>
+                        <div class="tagline">King of pepits</div>
+                    </div>
+                </div>
+                <div class="item profile">
+                    <img src="./img/profile.jpg" alt="profile-picture">
+                    <div class="idcard">
+                        <div class="username">@pepito</div>
+                        <div class="tagline">King of pepits</div>
+                    </div>
+                </div>
+                <div class="item profile">
+                    <img src="./img/profile.jpg" alt="profile-picture">
+                    <div class="idcard">
+                        <div class="username">@pepito</div>
+                        <div class="tagline">King of pepits</div>
+                    </div>
+                </div>
+                <div class="item profile">
+                    <img src="./img/profile.jpg" alt="profile-picture">
+                    <div class="idcard">
+                        <div class="username">@pepito</div>
+                        <div class="tagline">King of pepits</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
